Tue Apr 29 12:56:41 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/PredefinedType_Seq_Tmplinst.cpp:

          New file containing explicit instantiations of the template
          unbounded sequence classes whose element types are the CORBA 
          predefined types, i.e., the basic IDL types plus Object,
          ValueBase, AbstractBase, Any, and TypeCode. This eliminates
          the need for the IDL compiler to generate explicit instantiations 
          each time one of these sequences is used as a base class 
          in generated code.

        * tao/ValueBase.cpp:
        * tao/ValueBase.h:

          Added the tao_ValueBase_life struct similar to what is generated
          for derived value types, so that ValueBase can be used in the
          TAO_Unbounded_Valuetype_Sequence template class.

        * tao/TAO.dsp:
        * tao/Makefile.tao:
        * tao/Makefile.bor:
        * tao/Makefile.am:

          Added new file to project and makefiles.

Tue Apr 29 10:58:45 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:

          Removed unused argument and moved the setting of a flag to the
          end of the method in which it appears more than once, so that
          the second check will not return a bogus value. Also changed
          the logic so nested anonymous sequences (such as
          sequence<sequence<short> >) will get one and only one explicit
          instantiation, even if it is used more than once in a translation
          unit.

Tue Apr 29 16:13:46 2003  Simon McQueen  <sm@prismtechnologies.com>

	* tests/Abstract_Interface/client.cpp: Fixed build error.

Tue Apr 29 14:47:40 2003  Dave Smith  <dts@prismtechnologies.com>

	* tao/IOP_IORC.h:
	* tao/diffs/IOP_IOR.diff:

          Removed clash with symbol "IOR" defined in
          /usr/include/machine/inline.h on HPUX.

Mon Apr 28 18:09:43 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
